change plans name

--- a/pages/vps.html
+++ b/pages/vps.html
@@ -86,7 +86,7 @@
                     <div col>
                         <!-- Titulo Plano -->
                         <div class="container my-3" id="price-plan-title">
-                            <h5 class="text-center p-2"><strong>Plano 4.0</strong></h5>
+                            <h5 class="text-center p-2"><strong>Starter</strong></h5>
                         </div>
                         <!-- Preço  -->
                         <div class="container my-3" id="price-plan-price">
@@ -112,7 +112,7 @@
                     <div col>
                         <!-- Titulo Plano -->
                         <div class="container my-3" id="price-plan-title">
-                            <h5 class="text-center p-2"><strong>Plano 8.0</strong></h5>
+                            <h5 class="text-center p-2"><strong>Advanced</strong></h5>
                         </div>
                         <!-- Preço  -->
                         <div class="container my-3" id="price-plan-price">
@@ -138,7 +138,7 @@
                     <div col>
                         <!-- Titulo Plano -->
                         <div class="container my-3" id="price-plan-title">
-                            <h5 class="text-center p-2"><strong>Plano 20.0</strong></h5>
+                            <h5 class="text-center p-2"><strong>Professional</strong></h5>
                         </div>
                         <!-- Preço  -->
                         <div class="container my-3" id="price-plan-price">
@@ -163,7 +163,7 @@
                 <div class="col mx-4 price-plans-background">
                         <!-- Titulo Plano -->
                         <div class="container my-3" id="price-plan-title">
-                            <h5 class="text-center p-2"><strong>Plano 40.0</strong></h5>
+                            <h5 class="text-center p-2"><strong>Enterprise</strong></h5>
                         </div>
                         <!-- Preço  -->
                         <div class="container my-3" id="price-plan-price">
