--- a/pages/hosting.html
+++ b/pages/hosting.html
@@ -84,7 +84,7 @@
                     <div col>
                         <!-- Titulo Plano -->
                         <div class="container my-3" id="price-plan-title">
-                            <h5 class="text-center p-2"><strong>Plano 4.0</strong></h5>
+                            <h5 class="text-center p-2"><strong>Starter</strong></h5>
                         </div>
                         <!-- Preço  -->
                         <div class="container my-3" id="price-plan-price">
@@ -112,7 +112,7 @@
                     <div col>
                         <!-- Titulo Plano -->
                         <div class="container my-3" id="price-plan-title">
-                            <h5 class="text-center p-2"><strong>Plano 8.0</strong></h5>
+                            <h5 class="text-center p-2"><strong>Advanced</strong></h5>
                         </div>
                         <!-- Preço  -->
                         <div class="container my-3" id="price-plan-price">
@@ -140,7 +140,7 @@
                     <div col>
                         <!-- Titulo Plano -->
                         <div class="container my-3" id="price-plan-title">
-                            <h5 class="text-center p-2"><strong>Plano 20.0</strong></h5>
+                            <h5 class="text-center p-2"><strong>Professional</strong></h5>
                         </div>
                         <!-- Preço  -->
                         <div class="container my-3" id="price-plan-price">
@@ -168,7 +168,7 @@
                     <div col>
                         <!-- Titulo Plano -->
                         <div class="container my-3" id="price-plan-title">
-                            <h5 class="text-center p-2"><strong>Plano 40.0</strong></h5>
+                            <h5 class="text-center p-2"><strong>Enterprise</strong></h5>
                         </div>
                         <!-- Preço  -->
                         <div class="container my-3" id="price-plan-price">
