--- a/common/header.html
+++ b/common/header.html
@@ -35,7 +35,7 @@
                         <a class="nav-link" style="font-size: 18pt; width: 10rem; color: #FFDFD4;" href="/pages/hosting.html">Hospedagem</a>
                     </li>
                     <li class="nav-item text-center">
-                        <a class="nav-link" style="font-size: 18pt; width: 5rem; color: #FFDFD4;" href="/auth/login.html">Entrar</a>
+                        <a class="nav-link" style="font-size: 18pt; width: 5rem; color: #FFDFD4;" href="/auth/login.php">Entrar</a>
                     </li>
 
                 </ul>
