--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <!-- Header -->
-    <iframe src="common/header.html"
+    <iframe src="/../common/header.php"
         onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);this.remove()"></iframe>
     <main class="bd-masthead" role="main">
         <div class="container-fluid" id="fundo" style="height: 460px;">
