--- a/pages/vps.html
+++ b/pages/vps.html
@@ -19,8 +19,9 @@
 
 <body>
     <!-- Header -->
-    <iframe src="../common/header.html"
-        onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);this.remove()"></iframe>
+    <iframe src="/../common/header.php"
+
+    onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);this.remove()"></iframe>
     <main class="bd-masthead" role="main">
 
         <div class="container-fluid" id="fundo" style="height: 500px;">
