--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
+
 <html>
 
 <head>
     <title>SudoHosting</title>
+    <link rel="shortcut icon" href="/src/img/favicon.ico" title="GitHub">    
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
