--- a/common/footer.html
+++ b/common/footer.html
@@ -69,7 +69,7 @@
     <!-- Sobre -->
     <div class="col-3" id="footer-about-background">
         <h3 class="text-font my-4"><strong>Sobre</strong></h3>
-        <p class="text-font">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elit pellentesque habitant morbi tristique senectus et netus et. Nullam ac tortor vitae purus faucibus ornare suspendisse.</p>
+        <p class="text-font quicksand">A SudoHosting© é uma solução de armazenamento e hospedagem criado apartir da Tese de Conclusão de Curso dos alunos do 3º ano do curso Técnico de Informatica na ETEC João Gomes de Araújo.</p>
     </div>
 
 </div>
