fix plans desc description

--- a/pages/cloud.html
+++ b/pages/cloud.html
@@ -32,8 +32,9 @@
                     <div class="container mt-4">
                         <div class="text-center">
                             <h1 class="mb-3 gradient-text" style="font-family: 'Josefin Sans', sans-serif;">
-                                Cloud (Nuvem)</strong></h1>
-                            <p class="lead mb-4 text-font">Cloud(nuvem) para armazenar seus arquivos onlinee com
+                                Cloud (Nuvem)
+                            </h1>
+                            <p class="lead mb-4 text-font">Cloud(nuvem) para armazenar seus arquivos online com
                                 segurança.</p>
                             <p class="lead text-font">Confira nosso melhores planos a abaixo:</p>
                             <a class="btn gradientbutton-red" href="#container-price">
