fix auth redirect bug

--- a/pages/cloud.html
+++ b/pages/cloud.html
@@ -105,7 +105,7 @@
                             <p class="my-2">Integração com Nuvens externas (GDrive, OneDrive)</p>
                         </div>
                         <div class="text-center my-4">
-                            <a class="btn button-red" href="/auth/login.html">
+                            <a class="btn button-red" href="/auth/user/profile.php">
                                 <lead class="font-weight-bold text-font" style="font-size: 13pt;">Comprar agora</lead>
                             </a>
                         </div>
@@ -135,7 +135,7 @@
                             <p class="my-2">Integração com Nuvens externas (GDrive, OneDrive)</p>
                         </div>
                         <div class="text-center my-4">
-                            <a class="btn button-red" href="/auth/login.html">
+                            <a class="btn button-red" href="/auth/user/profile.php">
                                 <lead class="font-weight-bold text-font" style="font-size: 13pt;">Comprar agora</lead>
                             </a>
                         </div>
@@ -165,7 +165,7 @@
                             <p class="my-2">Integração com Nuvens externas (GDrive, OneDrive)</p>
                         </div>
                         <div class="text-center my-4">
-                            <a class="btn button-red" href="/auth/login.html">
+                            <a class="btn button-red" href="/auth/user/profile.php">
                                 <lead class="font-weight-bold text-font" style="font-size: 13pt;">Comprar agora</lead>
                             </a>
                         </div>
@@ -195,7 +195,7 @@
                             <p class="my-2">Integração com Nuvens externas (GDrive, OneDrive)</p>
                         </div>
                         <div class="text-center my-4">
-                            <a class="btn button-red" href="/auth/login.html">
+                            <a class="btn button-red" href="/auth/user/profile.php">
                                 <lead class="font-weight-bold text-font" style="font-size: 13pt;">Comprar agora</lead>
                             </a>
                         </div>
