--- a/pages/hosting.html
+++ b/pages/hosting.html
@@ -102,7 +102,7 @@
                             <p class="my-2">1vCPU</p>
                         </div>
                         <div class="text-center my-4">
-                            <a class="btn button-red" href="/auth/login.html">
+                            <a class="btn button-red" href="/auth/user/profile.php">
                                 <lead class="font-weight-bold text-font" style="font-size: 13pt;">Comprar agora</lead>
                             </a>
                         </div>
@@ -130,7 +130,7 @@
                             <p class="my-2">1.5vCPU</p>
                         </div>
                         <div class="text-center my-4">
-                            <a class="btn button-red" href="/auth/login.html">
+                            <a class="btn button-red" href="/auth/user/profile.php">
                                 <lead class="font-weight-bold text-font" style="font-size: 13pt;">Comprar agora</lead>
                             </a>
                         </div>
@@ -158,7 +158,7 @@
                             <p class="my-2">2vCPU</p>
                         </div>
                         <div class="text-center my-4">
-                            <a class="btn button-red" href="/auth/login.html">
+                            <a class="btn button-red" href="/auth/user/profile.php">
                                 <lead class="font-weight-bold text-font" style="font-size: 13pt;">Comprar agora</lead>
                             </a>
                         </div>
@@ -186,7 +186,7 @@
                             <p class="my-2">4vCPU</p>
                         </div>
                         <div class="text-center my-4">
-                            <a class="btn button-red" href="/auth/login.html">
+                            <a class="btn button-red" href="/auth/user/profile.php">
                                 <lead class="font-weight-bold text-font" style="font-size: 13pt;">Comprar agora</lead>
                             </a>
                         </div>
