--- a/pages/vps.html
+++ b/pages/vps.html
@@ -103,7 +103,7 @@
                             <p class="my-2">2 vCPU de processamento.</p>
                         </div>
                         <div class="text-center my-4">
-                        <a class="btn button-red" href="/auth/login.html">
+                            <a class="btn button-red" href="/auth/user/profile.php">
                             <lead class="font-weight-bold text-font" style="font-size: 13pt;">Comprar agora</lead>
                         </a>
                          </div>
@@ -129,7 +129,7 @@
                             <p class="my-2">3 vCPU de processamento.</p>
                         </div>
                         <div class="text-center my-4">
-                        <a class="btn button-red" href="/auth/login.html">
+                            <a class="btn button-red" href="/auth/user/profile.php">
                             <lead class="font-weight-bold text-font" style="font-size: 13pt;">Comprar agora</lead>
                         </a>
                          </div>
@@ -155,7 +155,7 @@
                             <p class="my-2">4 vCPU de processamento.</p>
                         </div>
                         <div class="text-center my-4">
-                        <a class="btn button-red" href="/auth/login.html">
+                            <a class="btn button-red" href="/auth/user/profile.php">
                             <lead class="font-weight-bold text-font" style="font-size: 13pt;">Comprar agora</lead>
                         </a>
                          </div>
@@ -180,7 +180,7 @@
                             <p class="my-2">4 vCPU de processamento.</p>
                         </div>
                         <div class="text-center my-4">
-                        <a class="btn button-red" href="/auth/login.html">
+                            <a class="btn button-red" href="/auth/user/profile.php">
                             <lead class="font-weight-bold text-font" style="font-size: 13pt;">Comprar agora</lead>
                         </a>
                          </div>
@@ -213,7 +213,7 @@
                         <p class="my-2">2 vCPU de processamento.</p>
                     </div>
                    <div class="text-center my-4">
-                        <a class="btn button-red" href="/auth/login.html">
+                            <a class="btn button-red" href="/auth/user/profile.php">
                             <lead class="font-weight-bold text-font" style="font-size: 13pt;">Comprar agora</lead>
                         </a>
                          </div>
@@ -241,7 +241,7 @@
                         <p class="my-2">3 vCPU de processamento.</p>
                     </div>
                     <div class="text-center my-4">
-                        <a class="btn button-red" href="/auth/login.html">
+                            <a class="btn button-red" href="/auth/user/profile.php">
                             <lead class="font-weight-bold text-font" style="font-size: 13pt;">Comprar agora</lead>
                         </a>
                          </div>
