--- a/common/footer.html
+++ b/common/footer.html
@@ -58,7 +58,7 @@
         <div class="container-fluid p-3 text-center" id="footer-license-background">
            
             <img src="../src/img/logotipo2.png" style="width:7em" class="img-fluid" alt="Logo">
-            <lead class="text-font my-auto">SudoHosting© 2020-2020 - Todos direitos reservados"</lead>
+            <lead class="text-font my-auto">SudoHosting© 2020-2020 - Todos direitos reservados</lead>
        
     </div>
 </div>
