update prices get start

--- a/common/footer.html
+++ b/common/footer.html
@@ -66,7 +66,7 @@
     <!-- Sobre -->
     <div class="col-3" id="footer-about-background">
         <h3 class="text-font my-4"><strong>Sobre</strong></h3>
-        <p class="text-font quicksand">A SudoHosting© é uma solução de armazenamento e hospedagem criado apartir da Tese de Conclusão de Curso dos alunos do 3º ano do curso Técnico de Informatica na ETEC João Gomes de Araújo.</p>
+        <p class="text-font quicksand">A SudoHosting© é uma solução de armazenamento e hospedagem criada a partir da Tese de Conclusão de Curso dos alunos do 3º ano do curso Técnico de Informatica na ETEC João Gomes de Araújo.</p>
     </div>
 
 </div>
