--- a/pages/hosting.html
+++ b/pages/hosting.html
@@ -43,7 +43,7 @@
                             <p class="font-weight-bold my-auto">Planos a partir de:</p>
                         </div>
                         <div class="container mt-3 p-1" id="desc-title" style="width: 11rem;">
-                            <p class="font-weight-bold my-auto">R$ #,##/mês*</p>
+                            <p class="font-weight-bold my-auto">R$ 5,99/mês*</p>
                         </div>
                     </div>
 
