responsive home page adaptation

--- a/common/footer.html
+++ b/common/footer.html
@@ -1,72 +1,73 @@
+
+
 <head>
     <title>SudoHosting</title>
-
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <!-- CSS only -->
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/home.css">
+ </head>
+ <!-- Footer -->
+ <div class="col p-0" id="footer-services-backgroud">
+    <!-- Serviços -->
+    <div class="row p-4 justify-content-around">
+       <!-- Serviços de Hospedagem -->
+       <div class="col">
+          <h4 id="footer-services-title">Serviços de Hospedagem</h4>
+          <lead class="text-font">
+             <p>Ver Planos</p>
+             <p>Comunicar planos personalizados</p>
+          </lead>
+       </div>
+       <!-- Serviços VPS -->
+       <div class="col">
+          <h4 id="footer-services-title">Serviços VPS</h4>
+          <lead class="text-font">
+             <p>Ver Planos</p>
+             <p>Comunicar planos personalizados</p>
+          </lead>
+       </div>
+       <!-- Informações -->
+       <div class="col">
+          <h4 id="footer-services-title">Informações</h4>
+          <lead class="text-font">
+             <p>Historia do SudoHosting</p>
+             <p>Entrar em contato</p>
+             <p>Direitos autorais</p>
+          </lead>
+       </div>
+       <!-- Comunicação -->
+       <div class="col">
+          <h4 id="footer-services-title">Comunicação</h4>
+          <lead class="text-font">
+             <p>Sobre</p>
+             <p>Entrar em contato</p>
+          </lead>
+       </div>
 
-</head>
-
-<!-- Footer -->
-
-<div class="row m-0 p-0">
-    <div class="col p-0">
-        <!-- Serviços -->
-        <div class="container-fluid" id="footer-services-backgroud">
-            <div class="row p-4">
-            <!-- Serviços de Hospedagem -->
-            <div class="col">
-                <h4 id="footer-services-title">Serviços de Hospedagem</h4>
-                <lead class="text-font">
-                    <p>Ver Planos</p>
-                    <p>Comunicar planos personalizados</p>
-                </lead>
-            </div>
-            <!-- Serviços VPS -->
-            <div class="col">
-                <h4 id="footer-services-title">Serviços VPS</h4>
-                <lead class="text-font">
-                    <p>Ver Planos</p>
-                    <p>Comunicar planos personalizados</p>
-                </lead>
-            </div>
-            <!-- Informações -->
-            <div class="col">
-                <h4 id="footer-services-title">Informações</h4>
-                <lead class="text-font">
-                    <p>Historia do SudoHosting</p>
-                    <p>Entrar em contato</p>
-                    <p>Direitos autorais</p>
-                </lead>
-            </div>
-            <!-- Comunicação -->
-            <div class="col">
-                <h4 id="footer-services-title">Comunicação</h4>
-                <lead class="text-font">
-                    <p>Sobre</p>
-                    <p>Entrar em contato</p>
-                </lead>
-            </div>
+       <div class="col-lg-4" id="footer-about-background">
+        <h3 class="text-font my-4"><strong>Sobre</strong></h3>
+        <p class="text-font quicksand">A SudoHosting© é uma solução de armazenamento e hospedagem criada a partir da Tese de Conclusão de Curso dos alunos do 3º ano do curso Técnico de Informatica na ETEC João Gomes de Araújo.</p>
         </div>
     </div>
     <div class="col p-0">
-        <!-- Licença -->
-        <div class="container-fluid p-3 text-center" id="footer-license-background">
-           
-            <img src="../src/img/logotipo2.png" style="width:7em" class="img-fluid" alt="Logo">
-            <lead class="text-font my-auto">SudoHosting© 2020-2020 - Todos direitos reservados</lead>
-       
+       <!-- Licença -->
+       <div class="container-fluid text-center" id="footer-license-background">
+          <div class="row justify-content-center">
+             <div class="p-2"><img src="../src/img/logotipo2.png" style="width:7em" class="img-fluid" alt="Logo"></div>
+             <div class="p-2">
+                <p class="text-font p-2">SudoHosting© 2020-2020 - Todos direitos reservados</p>
+             </div>
+          </div>
+       </div>
     </div>
-</div>
-</div>
-    <!-- Sobre -->
-    <div class="col-3" id="footer-about-background">
-        <h3 class="text-font my-4"><strong>Sobre</strong></h3>
-        <p class="text-font quicksand">A SudoHosting© é uma solução de armazenamento e hospedagem criada a partir da Tese de Conclusão de Curso dos alunos do 3º ano do curso Técnico de Informatica na ETEC João Gomes de Araújo.</p>
-    </div>
-
-</div>
+ </div>
+ <!-- Sobre -->
+ <!-- <div class="col-3" id="footer-about-background">
+    <h3 class="text-font my-4"><strong>Sobre</strong></h3>
+    <p class="text-font quicksand">A SudoHosting© é uma solução de armazenamento e hospedagem criada a partir da Tese de Conclusão de Curso dos alunos do 3º ano do curso Técnico de Informatica na ETEC João Gomes de Araújo.</p>
+    </div> -->
+ 
+ 
